--- a/class/table.html
+++ b/class/table.html
@@ -6,6 +6,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table border="2">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Phone</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Manish</td>
+                <td>22</td>
+                <td>1234567890</td>
+            </tr>
+            <tr>
+                <td>Abhishek</td>
+                <td>21</td>
+                <td>1234567890</td>                
+            </tr>
+            <tr>
+                <td>Anish</td>
+                <td>20</td>
+                <td>1234567890</td>
+            </tr>
+            <tr>
+                <td>Shivam</td>
+                <td>21</td>
+                <td>1234567890</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html> 
