--- a/homework/first.html
+++ b/homework/first.html
@@ -10,8 +10,8 @@
     <p>This is a sample paragraph to demonstrate HTML structure.</p>
     <img src="src/img.jpg" alt="wukong" width="400px">
     <pre>
-     Today is my first day of learning web development.
-       at geeksforgeeks.
+    Address: A -119, Street No- 6, Vidyapati Nagar,
+             Mubarakpur Dabas, Rohini, Delhi.
     </pre>
     
     <audio src="src/aud.mp3" controls autoplay></audio>
